--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,12 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "autoprefixer": "^9.8.6",
+        "draft-js": "^0.11.7",
         "postcss": "^8.3.6",
         "postcss-cli": "^8.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-draft-wysiwyg": "^1.14.7",
         "react-icons": "^4.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
