--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
         "@testing-library/user-event": "^12.1.10",
         "autoprefixer": "^9.8.6",
         "draft-js": "^0.11.7",
+        "leaflet": "^1.7.1",
         "postcss": "^8.3.6",
         "postcss-cli": "^8.3.1",
         "react": "^17.0.2",
