--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,7 @@
     "main": "server.js",
     "dependencies": {
         "bluebird": "^3.7.2",
+        "cloudinary": "^1.27.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
