--- a/back/package.json
+++ b/back/package.json
@@ -14,7 +14,8 @@
     "devDependencies": {},
     "scripts": {
         "test": "",
-        "start": "node server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "keywords": [],
     "author": "",
