add bk-user-auth branch

--- a/back/.env.example
+++ b/back/.env.example
@@ -4,6 +4,10 @@ DB_PORT=3306
 DB_USER=
 DB_PASSWORD=
 DB_NAME=iSport
+# 連線資料庫上限
+CONNECTION_LIMIT=10
 
 # 路徑
-Route_ORIGIN=
+Route_ORIGIN=http://localhost:3000
+
+SESSION_SECRET=iSportSessionSecret
