--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.21.4",
         "draft-js": "^0.11.7",
         "leaflet": "^1.7.1",
+        "moment": "^2.29.1",
         "postcss": "^8.3.6",
         "postcss-cli": "^8.3.1",
         "react": "^17.0.2",
