--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "server.js",
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "bluebird": "^3.7.2",
         "cloudinary": "^1.27.0",
         "cors": "^2.8.5",
@@ -13,7 +14,10 @@
         "express-validator": "^6.12.1",
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.12"
+        "nodemon": "^2.0.12",
+        "express-validator": "^6.12.1",
+        "multer": "^1.4.3",
+        "uuidv4": "^6.2.12"
     },
     "devDependencies": {},
     "scripts": {
