--- a/back/package.json
+++ b/back/package.json
@@ -11,10 +11,11 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
+        "express-validator": "^6.12.1",
+        "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.3",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.12",
-        "express-validator": "^6.12.1",
-        "multer": "^1.4.3",
         "uuidv4": "^6.2.12"
     },
     "devDependencies": {},
