--- a/back/package.json
+++ b/back/package.json
@@ -4,19 +4,19 @@
     "description": "",
     "main": "server.js",
     "dependencies": {
-        "bcrypt": "^5.0.1",
-        "bluebird": "^3.7.2",
-        "cloudinary": "^1.27.0",
-        "cors": "^2.8.5",
-        "dotenv": "^10.0.0",
-        "express": "^4.17.1",
-        "express-session": "^1.17.2",
-        "express-validator": "^6.12.1",
-        "jsonwebtoken": "^8.5.1",
-        "multer": "^1.4.3",
-        "mysql": "^2.18.1",
-        "nodemon": "^2.0.12",
-        "uuidv4": "^6.2.12"
+        "bcrypt": "5.0.1",
+        "bluebird": "3.7.2",
+        "cloudinary": "1.27.0",
+        "cors": "2.8.5",
+        "dotenv": "10.0.0",
+        "express": "4.17.1",
+        "express-session": "1.17.2",
+        "express-validator": "6.12.1",
+        "jsonwebtoken": "8.5.1",
+        "multer": "1.4.3",
+        "mysql": "2.18.1",
+        "nodemon": "2.0.12",
+        "uuidv4": "6.2.12"
     },
     "devDependencies": {},
     "scripts": {
