--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
         "axios": "0.21.4",
         "cloudinary-react": "1.7.0",
         "draft-js": "0.11.7",
+        "emailjs-com": "^3.2.0",
         "leaflet": "1.7.1",
         "moment": "2.29.1",
         "postcss": "8.3.6",
@@ -26,6 +27,7 @@
         "react-icons": "4.2.0",
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
+        "smtpjs": "0.0.1",
         "tailwindcss": "2.2.7",
         "web-vitals": "1.0.1"
     },
