--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
         "express-session": "1.17.2",
         "express-validator": "6.12.1",
         "jsonwebtoken": "8.5.1",
+        "moment": "2.29.1",
         "multer": "1.4.3",
         "mysql": "2.18.1",
         "nodemon": "2.0.12",
