--- a/back/.env.example
+++ b/back/.env.example
@@ -12,3 +12,8 @@ Route_ORIGIN=http://localhost:3000
 
 SESSION_SECRET=
 JWT_SECRET=
+
+# CLOUDINARY 設定
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_KEY=
+CLOUDINARY_SECRET=
