--- a/back/.env.example
+++ b/back/.env.example
@@ -12,3 +12,11 @@ Route_ORIGIN=http://localhost:3000
 
 SESSION_SECRET=
 JWT_SECRET=
+
+# 三方登入認證用
+
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+
+GOOGOLE_ID=
+GOOGLE_SECRET=
