--- a/back/package.json
+++ b/back/package.json
@@ -12,11 +12,13 @@
         "express": "4.17.1",
         "express-session": "1.17.2",
         "express-validator": "6.12.1",
+        "http": "0.0.1-security",
         "jsonwebtoken": "8.5.1",
         "multer": "1.4.3",
         "multer-storage-cloudinary": "^4.0.0",
         "mysql": "2.18.1",
         "nodemon": "2.0.12",
+        "socket.io": "^4.2.0",
         "uuidv4": "6.2.12"
     },
     "devDependencies": {},
