--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
         "moment": "2.29.1",
         "postcss": "8.3.6",
         "postcss-cli": "8.3.1",
+        "query-string": "^7.0.1",
         "react": "17.0.2",
         "react-credit-cards": "0.8.3",
         "react-dom": "17.0.2",
@@ -33,6 +34,7 @@
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
         "smtpjs": "0.0.1",
+        "socket.io-client": "^4.2.0",
         "swagger-convert-to-html": "^1.0.3",
         "tailwindcss": "2.2.7",
         "web-vitals": "1.0.1",
