--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "bcrypt": "5.0.1",
         "bluebird": "3.7.2",
-        "cloudinary": "^1.27.0",
+        "cloudinary": "1.27.0",
         "cors": "2.8.5",
         "dotenv": "10.0.0",
         "express": "4.17.1",
@@ -16,10 +16,10 @@
         "jsonwebtoken": "8.5.1",
         "moment": "2.29.1",
         "multer": "1.4.3",
-        "multer-storage-cloudinary": "^4.0.0",
+        "multer-storage-cloudinary": "4.0.0",
         "mysql": "2.18.1",
         "nodemon": "2.0.12",
-        "socket.io": "^4.2.0",
+        "socket.io": "4.2.0",
         "uuidv4": "6.2.12"
     },
     "devDependencies": {},
