--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,10 +1,9 @@
 FROM node:14
 WORKDIR /app
 
-COPY package.json ./
+COPY package.json .
 RUN npm install
 
-COPY . /app
+COPY . .
 
 CMD [ "npm", "run", "start" ]
-
