--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:14
 WORKDIR /app
 
-COPY package.json ./
+COPY package.json .
 RUN npm install
 
-COPY . /app
-CMD [ "npm", "run", "build" ]
+COPY . .
 
+RUN npm run build
 
+RUN mv public/dist/* public/
+CMD [ "mv", "public/index.js", "public/index.css", "public/dist/" ]
