--- a/front/package.json
+++ b/front/package.json
@@ -7,20 +7,13 @@
         "@fortawesome/free-solid-svg-icons": "5.15.4",
         "@fortawesome/react-fontawesome": "0.1.15",
         "@react-oauth/google": "^0.2.6",
-        "@testing-library/jest-dom": "5.11.4",
+        "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "11.1.0",
         "@testing-library/user-event": "12.1.10",
         "aos": "2.3.4",
         "autoprefixer": "9.8.6",
         "axios": "0.21.4",
         "cloudinary-react": "1.7.0",
-        "dompurify": "^2.3.3",
-        "draft-convert": "^2.1.12",
-        "draft-js": "^0.11.7",
-        "draftjs-to-html": "^0.9.1",
-        "eegeo.js": "^0.1.1111",
-        "emailjs-com": "^3.2.0",
-        "html-to-draftjs": "^1.5.0",
         "leaflet": "1.7.1",
         "moment": "2.29.1",
         "postcss": "8.3.6",
@@ -31,18 +24,13 @@
         "react-dom": "17.0.2",
         "react-draft-wysiwyg": "^1.14.7",
         "react-facebook-login": "4.1.1",
-        "react-google-login": "5.2.2",
         "react-google-recaptcha-v3": "^1.9.5",
         "react-hook-form": "7.14.2",
         "react-icons": "4.2.0",
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
-        "smtpjs": "0.0.1",
         "socket.io-client": "^4.2.0",
-        "swagger-convert-to-html": "^1.0.3",
-        "tailwindcss": "2.2.7",
-        "web-vitals": "1.0.1",
-        "wrld-react": "^0.1.2401"
+        "tailwindcss": "2.2.7"
     },
     "scripts": {
         "start": "react-scripts start",
