--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
         "autoprefixer": "9.8.6",
         "axios": "0.21.4",
         "cloudinary-react": "1.7.0",
+        "draft-js": "^0.11.7",
         "leaflet": "1.7.1",
         "moment": "2.29.1",
         "postcss": "8.3.6",
