--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  front:
-    build: ./front
-    env_file:
-      - ./.env
-    volumes:
-      - react_build:/app/public
+  # front:
+  #   build: ./front
+  #   env_file:
+  #     - ./.env
+  #   volumes:
+  #     - react_build:/app/public
 
   back:
-    depends_on:
-      - front
+    # depends_on:
+    #   - front
     build: ./back
     env_file:
       - ./.env
@@ -19,20 +19,14 @@ services:
     volumes:
       - react_build:/app/build
 
-  # nginx:
-  #   image: nginx:latest
-  #   depends_on:
-  #     - back
-  #   ports:
-  #     - 80:80
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  nginx:
+    image: nginx:latest
+    depends_on:
+      - back
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
 
-volumes:
-  react_build:
-
-
-
-
-
-
+# volumes:
+#   react_build:
